--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <%- include('./partials/head') %> 
 <body>
     <!-- HEADER -->
-    <%- include('./partials/head') %> 
+    <%- include('./partials/header') %> 
 
     <!-- MAIN -->
     <main class=" d-flex a-center j-center  flex-column ">
