--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -21,7 +21,7 @@
                             <img width="60" height="60" src="/img/tv4.jpg" alt="tv">
                             <img width="60" height="60" src="/img/tv5.jpg" alt="tv">
                         </div>
-                        <i class="fa-solid fa-arrow-right"></i>
+                        <i id="flecha" class="fa-solid fa-arrow-right"></i>
                     </article>
                 </section>
 
