--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -27,7 +27,7 @@ main h2{
 .more_img {
     display: flex;
     gap: 20px;
-    margin-left: 10%;
+    margin-left: 10px;
 }
 
 .more_img_box i{
@@ -169,12 +169,20 @@ main h2{
     display: none;
 }
 
-@media (min-width: 420px){
+#flecha {
+    display: none;
+}
+
+@media (min-width:768px){
 
 .send{
     display: inline-block;
     font-family: 'Roboto';
     font-size: 16px;
+}
+
+#flecha {
+    display: inline-block;
 }
 
 .send i{
@@ -238,7 +246,7 @@ main h2{
     
 }
 
-@media (min-width: 950px){
+@media (min-width:1024px){
 
 .containsproduct{
     display: flex;
