--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,12 @@
     <!-- HEADER -->
     <%- include('./partials/header') %> 
     <main class="main">
-        <img class="main__section__banner__img" src="/img/ofertas-banner2.jpg" alt="">
+        <a href="#"><img  class="main__section__banner__img" src="/img/ofertas-banner2.jpg" alt=""></a>
         <h2>Lo mejor para tu hogar</h2>
         <section class="main__section">
             
             <div class="main__section__caja">
-            <img class ="main__section__img" src="/img/secarropas.jpg" alt="">
+            <a href="#"><img  class ="main__section__img" src="/img/secarropas.jpg" alt=""></a>
             <div class="main__section__texto">
             <h5>Secarropas centrífugo Koh-i-noor</h5>
             <p class="">$35.999</p>
@@ -20,7 +20,7 @@
             </div>    
             </div> 
             <div class="main__section__caja">
-            <img class ="main__section__img" src="/img/heladera.jpg" alt="">
+            <a href="#"><img  class ="main__section__img" src="/img/heladera.jpg" alt=""></a>
             <div class="main__section__texto">
             <h5>Heladera inverter no frost Samsung</h5> 
             <p class="">$158.190</p>
@@ -28,7 +28,7 @@
             </div> 
             </div>
             <div class="main__section__caja">
-            <img class ="main__section__img" src="/img/lavarropas2.jpg" alt="">
+            <a href="#"><img  class ="main__section__img" src="/img/lavarropas2.jpg" alt=""></a>
             <div class="main__section__texto">
             <h5>Lavarropas automático Whirlpool</h5>
             <p class="">$100.499</p>
@@ -36,7 +36,7 @@
             </div>   
             </div>
             <div class="main__section__caja">
-            <img class ="main__section__img" src="/img/ropero.jpg" alt="">
+            <a href="#"><img  class ="main__section__img" src="/img/ropero.jpg" alt=""></a>
             <div class="main__section__texto">
             <h5>Ropero de madera</h5>
             <p class="">$45.065</p>
@@ -45,7 +45,7 @@
             </div>  
             </div>
             <div class="main__section__caja">
-                <img class ="main__section__img" src="/img/ventilador.jpg" alt="">
+                <a href="#"><img  class ="main__section__img" src="/img/ventilador.jpg" alt=""></a>
                 <div class="main__section__texto">
                 <h5>Ventilador de techo Liliana</h5>
                 <p class="">$44.899</p>
@@ -53,7 +53,7 @@
                 </div>     
                 </div>
                 <div class="main__section__caja">
-                    <img class ="main__section__img" src="/img/colchon.jpg" alt="">
+                    <a href="#"><img  class ="main__section__img" src="/img/colchon.jpg" alt=""></a>
                     <div class="main__section__texto">
                     <h5>Colchón 1 plaza de espuma</h5>
                     <p class="">$47.599</p>
@@ -62,11 +62,11 @@
                     </div>
             <div class="main__section__img__banner">                
                 <h2>Ofertas en todos los productos</h2>
-                <img class="main__section__banner__img__2" src="/img/banner4.jpg" alt="">
+                <a href="#"><img  class="main__section__banner__img__2" src="/img/banner4.jpg" alt=""></a>
             <h2>Mejores ofertas</h2>
             </div>    
             <div class="main__section__caja">
-            <img class ="main__section__img" src="/img/cocina.jpg" alt="">
+            <a href="#"><img  class ="main__section__img" src="/img/cocina.jpg" alt=""></a>
             <div class="main__section__texto">
             <h5>Cocina Electrolux</h5>
             <p class="">$189.799</p>
@@ -74,7 +74,7 @@
             </div>     
             </div> 
             <div class="main__section__caja">
-            <img class ="main__section__img" src="/img/tostadora.png" alt="">
+            <a href="#"><img  class ="main__section__img" src="/img/tostadora.png" alt=""></a>
             <div class="main__section__texto">
             <h5>Tostadora Moulinex Vita</h5> 
             <p class="">$7.590</p>
@@ -82,7 +82,7 @@
             </div> 
             </div>
             <div class="main__section__caja">
-            <img class ="main__section__img" src="/img/inodoro.jpg" alt="">
+            <a href="#"><img  class ="main__section__img" src="/img/inodoro.jpg" alt=""></a>
             <div class="main__section__texto">
             <h5>Inodoro Prunus One Piece</h5>
             <p class="">$37.012</p>
@@ -90,7 +90,7 @@
             </div>     
             </div>
             <div class="main__section__caja">
-                <img class ="main__section__img" src="/img/tacho.jpg" alt="">
+                <a href="#"><img  class ="main__section__img" src="/img/tacho.jpg" alt=""></a>
                 <div class="main__section__texto">
                 <h5>Cesto Tacho Basura Acero Inoxidable Pedal</h5>
                 <p class="">$4.990</p>
@@ -98,7 +98,7 @@
                 </div>     
                 </div>
                 <div class="main__section__caja">
-                    <img class ="main__section__img" src="/img/sillon.jpg" alt="">
+                    <a href="#"><img  class ="main__section__img" src="/img/sillon.jpg" alt=""></a>
                     <div class="main__section__texto">
                     <h5>Sillon Capitone Premium</h5>
                     <p class="">$19.999</p>
@@ -106,7 +106,7 @@
                     </div>     
                     </div>
                     <div class="main__section__caja">
-                        <img class ="main__section__img" src="/img/tv1.jpg" alt="">
+                        <a href="#"><img  class ="main__section__img" src="/img/tv1.jpg" alt=""></a>
                         <div class="main__section__texto">
                         <h5>Smart TV Samsung</h5>
                         <p class="">$112.999</p>
@@ -115,7 +115,7 @@
                         </div>
         </section>
     </main>
-    <a class="outsidelogo" href="/index"><img  width="60px" height="60px" src="/img/logo 1.png" alt="logo"></a>
+    <a href="/" class="outsidelogo"  ><img   width="60px" height="60px" src="/img/logo 1.png" alt="logo"></a>
 <!-- FOOTER -->
 <%- include('./partials/footer') %> 
 </body>
