--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@
         <div class="footer_contact">
 
             <ul>
-                <p>Aatencion al cliente:</p>
+                <p>Atencion al cliente:</p>
                 <li>0810 999 6644</li>
                 <li>LU-VI de 09:00 a 18:00</li>
                 <li>SA de 9:00 a 13:00</li>
