--- a/views/productEdition.ejs
+++ b/views/productEdition.ejs
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
-<!-- HEAD -->
-<%- include('./partials/head') %>
-<body>
-    <!-- HEADER -->
-    <%- include('./partials/header') %>
+<html lang="es">
+
+    <%- include('./partials/head') %> 
+
+
+<body class="result">
+    <%- include('./partials/header') %> 
+
     <main class="main">
-    <section class="register__main__section">
-    <form action="" method="POST">
-        <div class="form__box__barra">
-            <label class="titulo">Nombre del Producto</label>
-            <input class="input" type="text" name="product" placeholder="Ingrese nombre del producto">
-        </div>
-        <div class="form__box__barra">
-            <label class="titulo">Descripción</label>
-            <input class="input" type="text" name="description" placeholder="Ingrese una descripcion del producto">
-        </div>
-        <div class="form__box__barra"> 
-            <label>Seleccione una imagen: </label>    
-            <input class="img" type="file" name="foto" accept=".jpg" >
-        </div>
-        <div class="form__box__barra">
-            <label class="titulo">Precio</label>
-            <input class="input" type="text" name="price" placeholder="Ingrese un precio">
-        </div>
-</form>         
-    </section>    
-    </main>    
+                <section class="main__section">   
+                    <!-- <h4>Nuevo producto</h4> -->
+                        <form action="" method="POST">
+                                <div class="form__box__barra">
+                                    <label for="title" class="titulo">Producto</label>
+                                    <input type="text" class="input" id="title" name="title">
+                                  </div>
+                                  <div class="form__box__barra">
+                                    <label for="price" class="titulo">Precio</label>
+                                    <input class="input" id="price" type="number" name="price">
+                                  </div>
+                                  <div class="form__box__barra">
+                                    <label for="discount" class="titulo">Descuento</label>
+                                    <input class="input" id="discount" type="number" name="discount">
+                                  </div>
+                                  <div class="form__box__barra">
+                                    <label for="seccion" class="titulo">Sección</label>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="descuento" name="section" id="section1">
+                                        <label class="form-check-label" for="section1">
+                                          Descuento
+                                        </label>
+                                      </div>
+                                      <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="hotSale" name="section" id="section2">
+                                        <label class="form-check-label" for="section2">
+                                          Hot Sale
+                                        </label>
+                                      </div>
+                                  </div>
+                                  <div class="form__box__barra">
+                                    <label for="brand" class="titulo">Marca</label>
+                                    <select name="brand" id="brand" class="input">
+                                        <option value="" hidden selected>Seleccionar marca</option>
+                                    </select>
+                                  </div>
+                                  <div class="form__box__barra">
+                                    <label for="description" class="titulo">Descripción</label>
+                                    <textarea class="input" name="description"></textarea>
+                                  </div>
+                                  <div class="form__box__barra">
+                                    <button type="submit">Enviar</button>
+                                  </div>
+                            </div>
+                        </form> 
+                    </div>
+                </section> 
+    </main>
+    <%- include('./partials/footer') %> 
 </body>
-
-<%- include('./partials/footer') %>
-
 </html>
