cambio de ubicacion forms

--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -110,6 +110,14 @@
 
             </section>
     </main>
+    <nav class="main__nav">
+        <ul>
+            <button><li><a href="/products/productAdd">Actualizar</a></li></button>
+            <button><li><a href="/products/productEdition">Editar</a></li></button>
+            
+        </ul>
+    </nav>   
+    </section> 
 
     <a class="outsidelogo" href="/index"><img  width="60px" height="60px" src="/img/logo 1.png" alt="logo"></a>
 
