--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,10 +16,23 @@
     </div>
     
     <nav class="header__nav">
-        <ul>
+        <ul class="menu-horizontal">
             <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
             <li class="header__nav__li"><a href="/users/login">Ingresa</a></li>
-            <li class="header__nav__li"><a href="/products/productDetail">Categorias</a></li>
+            <li>
+                <a href="#">Categorias</a>
+                    <ul class="menu-vertical">
+                        <li><a href="/products/productDetail">Televisores</a></li>
+                        <li><a href="#">Celulares</a></li>
+                        <li><a href="#">Equipos de audio</a></li>
+                        <li><a href="#">Consolas</a></li>
+                        <li><a href="#">Hogar</a></li>
+                        <li><a href="#">Muebles</a></li>
+                        <li><a href="#">Climatización</a></li>
+                        <li><a href="#">Lavado</a></li>
+                        <li><a href="#">Cocina</a></li>
+                      </ul>
+            </li>
             <li class="header__nav__li"><a href="/products/productEdition">Edicion</a></li>
             <li class="header__nav__li"><a href="/products/productAdd">Actualizar</a></li>
             <li class="header__nav__li"><a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
@@ -27,3 +40,5 @@
     </nav>   
     </section>     
 </header>
+
+<!-- <li class="header__nav__li"><a href="/products/productDetail">Categorias</a></li> -->
