trabajando en las vistas de home y json

--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -36,7 +36,10 @@
                     </div>
                      <div class="buttons">
                         <a href="#">Comprar ahora</a>
-                        <a href="#">Añadir al carrito</a>
+<!--                         <a href="#">Añadir al carrito</a>
+ -->                        <a href="/products/productEdition">Editar</a>
+                        <a href="/products/delete">Eliminar</a>
+                        
                     </div>
                     <div class="send">
                         <div class="cuandollega">
@@ -112,8 +115,8 @@
     </main>
     <nav class="main__nav">
         <ul>
-            <button><li><a href="/products/productAdd">Actualizar</a></li></button>
-            <button><li><a href="/products/productEdition">Editar</a></li></button>
+            <!-- <button><li><a href="/products/productAdd">Actualizar</a></li></button>
+            <button><li><a href="/products/productEdition">Editar</a></li></button> -->
             
         </ul>
     </nav>   
