--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,10 +19,12 @@
         <ul class="menu-horizontal">
             <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
             <li class="header__nav__li"><a href="/users/login">Ingresa</a></li>
+<!--             <li class="header__nav__li"><a href="/products/edit">Editar</a></li>
+ -->
             <li>
                 <a href="#">Categorias</a>
                     <ul class="menu-vertical">
-                        <li><a href="/products/productDetail">Televisores</a></li>
+                        <li><a href="/products/detail">Televisores</a></li>
                         <li><a href="#">Celulares</a></li>
                         <li><a href="#">Equipos de audio</a></li>
                         <li><a href="#">Consolas</a></li>
@@ -33,7 +35,7 @@
                         <li><a href="#">Cocina</a></li>
                       </ul>
             </li>
-            <li class="header__nav__li"><a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+            <li class="header__nav__li"><a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
     </nav>   
     </section>     
