--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
             <li>
                 <a href="#">Categorias</a>
                     <ul class="menu-vertical">
-                        <li><a href="/products/productDetail">Televisores</a></li>
+                        <li><a href="/products/detail/">Televisores</a></li>
                         <li><a href="#">Celulares</a></li>
                         <li><a href="#">Equipos de audio</a></li>
                         <li><a href="#">Consolas</a></li>
