--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -9,9 +9,9 @@
     <main>
         <section class="maintop">
                 <section class="producto">
-                    <h2>Smart tv Samsung Qled 85"</h2>
+                    <h2> <%= product.title %> </h2>
                     <div class="product_img">
-                        <img width="300" height="300" src="/img/tv1.jpg" alt="tv">
+                        <img width="400" height="400" src="/img/tv1.jpg" alt="tv">
                     </div>
 
                     <article class="more_img_box">
