--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,15 +22,15 @@
             <li>
                 <a href="#">Categorias</a>
                     <ul class="menu-vertical">
-                        <li><a href="/products/detail/">Televisores</a></li>
-                        <li><a href="#">Celulares</a></li>
-                        <li><a href="#">Equipos de audio</a></li>
-                        <li><a href="#">Consolas</a></li>
-                        <li><a href="#">Hogar</a></li>
-                        <li><a href="#">Muebles</a></li>
-                        <li><a href="#">Climatización</a></li>
-                        <li><a href="#">Lavado</a></li>
-                        <li><a href="#">Cocina</a></li>
+                        <li><a href="/products/allproducts/tv ">Televisores</a></li>
+                        <li><a href="/products/allproducts/celulares">Celulares</a></li>
+                        <li><a href="/products/allproducts/audio">Equipos de audio</a></li>
+                        <li><a href="/products/allproducts/consolas">Consolas</a></li>
+                        <li><a href="/products/allproducts/hogar">Hogar</a></li>
+                        <li><a href="/products/allproducts/muebles">Muebles</a></li>
+                        <li><a href="/products/allproducts/climatizacion">Climatización</a></li>
+                        <li><a href="/products/allproducts/lavado">Lavado</a></li>
+                        <li><a href="/products/allproducts/cocina">Cocina</a></li>
                       </ul>
             </li>
             <li class="header__nav__li"><a href="/products/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
