--- a/views/allproducts.ejs
+++ b/views/allproducts.ejs
@@ -5,18 +5,20 @@
 
 <body class="result">
     <%- include('./partials/header') %> 
-    <main class="main">
-        <% type.forEach(({id,title, image,discount,price}) => { %>
-			<div class="main__section__caja">
-			<a href="/products/detail/<%= id %> "><img  class ="main__section__img" src="/img/<%= image %>" alt=""></a>
-			<div class="main__section__texto">
-			<h5><%= title %> </h5>
+
+    <main class="interesting_products">
+		<div class="main_allProducts">
+		<div class="containsproduct">
+        <% type.forEach(({id,title, image,discount,price}) => { %>		
+			<article>
+			<a href="/products/detail/<%= id %> "><img  class ="main__section__img" src="/img/<%= image %>" alt=""></a>	
+			<h5 class="interesting_products_border"><%= title %> </h5>
 			<p class="">$<%= price %> </p>
 			<p class=""><%= discount %> % OFF</p>  
-			</div>    
-			</div>  
+			</article>			  
 		<% }) %>
-
+		</div>
+		</div>
     </main>
 
     
