--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,8 +9,8 @@
     </div>
      <div class="header__section__menu">
         <i id="burguer" class="fa-solid fa-bars"></i>
-        <form class="header__section__barra" action="">
-        <input class="search" placeholder="Buscar productos,marcas y mas..." type="text">
+        <form action="/search" method="GET" class="header__section__barra" >
+        <input class="search" placeholder="Buscar productos,marcas y mas..." type="text" name="keywords">
         <button class="header__section__button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
     </div>
