product-Edit and product-Add and productControllers

--- a/views/edition.ejs
+++ b/views/edition.ejs
@@ -1,57 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-<!-- Include Head -->
-<%- include('partials/head', {title: 'Formulario de creación'}) %>
-<body>
-	<!-- Header -->
-	<%- include('partials/header') %>
-	<!-- /Header -->
 
-	<div class="container products-wrapper">
-		<div class="row">
-			<div class="col-12">
-				<h2 class="products-title">Formulario de creación de productos</h2>
-			</div>
-		</div>
-		<div class="col-12">
-			<form action="/products/store" method="POST">
-				<div class="row product-detail">
-					<div class="col-12 col-md-6">
-						<label for="name" class="form-label">Nombre del producto:</label>
-						<input type="text" id="name" name="name" placeholder="Ej: Zapatillas Reebok" class="form-input">
-					</div>
-					<div class="col-12 col-md-6">
-						<label for="price" class="form-label">Precio del producto:</label>
-						<input type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input">
-					</div>
-					<div class="col-12 col-md-6">
-						<label for="discount" class="form-label">Descuento:</label>
-						<input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
-					</div>
-					<div class="col-12 col-md-6">
-						<label for="category" class="form-label">Categoría:</label>
-						<select name="category" id="category" class="form-input">
-							<option value="">Elegí</option>
-							<option value="in-sale">En oferta</option>
-							<option value="visited">Últimos agregados</option>
-						</select>
-					</div>
-					<div class="col-12">
-						<label for="description" class="form-label">Descipción:</label>
-						<textarea name="description" id="description" class="form-input"></textarea>
-					</div>
-					<div class="col-12">
-						<button type="submit" class="buy-now-button">Guardar producto</button>
-					</div>
-				</div>
-			</form>
-		</div>
+    <%- include('./partials/head', {
+        title : 'Nuevo producto'
+    }) %> 
 
-	</div>
-	<!-- /todos los productos -->
 
-	<!-- footer -->
-	<%- include('partials/footer') %>
-	<!-- /footer -->
-</body>	
+<body class="result">
+    <%- include('./partials/header') %> 
+
+    <main class="container">
+        <div class="row mt-5">
+            <div class="col-12 col-md-8 col-lg-6 mx-auto">
+                <section class="card shadow">
+                    <div class="card-header">
+                        <h4>Editar producto: <%= product.title %></h4>
+                    </div>
+                    <div class="card-body">
+                        <form action="/products/update/<%= product.id %>?_method=PUT" method="POST">
+                            <div class="row">
+                                <div class="mb-3 col-12">
+                                    <label for="title" class="form-label">Producto</label>
+                                    <input type="text" class="form-control" id="title" name="title" value="<%= product.title %>">
+                                  </div>
+                                  <div class="mb-3 col-12 col-md-6">
+                                    <label for="price" class="form-label">Precio</label>
+                                    <input class="form-control" id="price" type="number" name="price" value="<%= product.price %>">
+                                  </div>
+                                  <div class="mb-3 col-12 col-md-6">
+                                    <label for="discount" class="form-label">Descuento</label>
+                                    <input class="form-control" id="discount" type="number" name="discount" value="<%= product.discount %>">
+                                  </div>
+                                  <div class="mb-3 col-12 col-md-6">
+                                    <label for="seccion" class="form-label">Sección</label>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="lo mejor" name="section" id="section1" <%= product.section === "lo mejor" && 'checked'%> >
+                                        <label class="form-check-label" for="section1">
+                                          Stock
+                                        </label>
+                                      </div>
+                                      <div class="form-check">
+                                        <input class="form-check-input" type="radio" value="oferta" name="section" id="section2"  <%= product.section === "oferta" && 'checked'%> >
+                                        <label class="form-check-label" for="section2">
+                                          Oferta
+                                        </label>
+                                      </div>
+                                  </div>
+                                  <div class="mb-3 col-12">
+                                    <label for="description" class="form-label">Descripción</label>
+                                    <textarea class="form-control" name="description" id="description" cols="30" rows="5" style="resize: none;"><%= product.description %></textarea>
+                                  </div>
+                                  <div class="text-end">
+                                    <a href="/products/delete/<%= product.id %>" class="btn btn-danger">Eliminar</a>
+                                    <a href="/products/detail/<%= product.id %>" class="btn btn-secondary">Cancelar</a>
+                                    <button type="submit" class="btn btn-success">Guardar cambios</button>
+
+                                  </div>
+                            </div>
+                          
+                        </form>
+                        
+                    </div>
+                </section>
+            </div>
+        </div>
+      
+    </main>
+</body>
+
 </html>
