--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,7 @@
         <ul class="menu-horizontal">
             <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
             <li class="header__nav__li"><a href="/users/login">Ingresa</a></li>
+            <li class="header__nav__li"><a href="/products/create">Vender</a></li>
 <!--             <li class="header__nav__li"><a href="/products/edit">Editar</a></li>
  -->
             <li>
