--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -37,7 +37,7 @@
                      <div class="buttons">
                         <a href="#">Comprar ahora</a>
 <!--                         <a href="#">Añadir al carrito</a>
- -->                        <a href="/products/productEdition">Editar</a>
+ -->                        <a href="/products/edit/<%= product.id %>">Editar</a>
                         <a href="/products/delete">Eliminar</a>
                         
                     </div>
@@ -80,9 +80,9 @@
 
             <section class="description">   
                 <h4 class="tittle">Funciones especiales</h4>
-                <p class="product__description">Con su función Multi View conseguirás dividir la pantalla del smart en dos, para que puedas ver la TV y tu smartphone al mismo tiempo y en un solo lugar.</p>
+                <p class="product__description"><%= product.description %> </p>
                 <h4 class="tittle"><%= product.title %></h4>
-                <p class="product__description">El Smart TV Samsung QN85Q70AAGCZB posee un diseño delgado y asombroso, con una pantalla de 85 pulgadas y resolución 4K QLED, con la que tendrás imágenes claras y nítidas, para disfrutar de todo tu contenido favorito sin perderte ningún detalle. Además, podrás tener una experiencia gamer diferente y mejorada, ya que las pantallas de 21:9 y 32:9 te brindarán visibilidad adicional y, con FreeSync Premium Pro, disfrutarás tus partidas con más fluidez y enfoque.</p>
+                <p class="product__description"><%= product.description %> </p>
 
             </section>
 
