--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -17,7 +17,7 @@
                         <h4>Nuevo producto</h4>
                     </div>
                     <div class="card-body">
-                        <form action="/products/store" method="POST">
+                        <form action="/products/store" method="POST" enctype="multipart/form-data">
                             <div class="row">
                                 <div class="mb-3 col-12">
                                     <label for="title" class="form-label">Producto</label>
