--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -38,7 +38,9 @@
                         <a href="#">Comprar ahora</a>
 <!--                         <a href="#">Añadir al carrito</a>
  -->                        <a href="/products/edit/<%= product.id %>">Editar</a>
-                        <a href="/products/delete">Eliminar</a>
+                        <form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
+                        <button type="submit" class="action-button delete">Eliminar</button>
+                        </form>
                         
                     </div>
                     <div class="send">
