--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -51,6 +51,10 @@
                                     <label for="description" class="form-label">Descripción</label>
                                     <textarea class="form-control" name="description" id="description" cols="30" rows="5" style="resize: none;"></textarea>
                                   </div>
+                                  <div class="mb-3 col-12 col-md-6">
+                                    <label for="description" class="form-label">tipo</label>
+                                    <textarea class="form-control" name="type" id="description" cols="30" rows="5" style="resize: none;"></textarea>
+                                  </div>
 
                                   <div class="mb-3 col-12 col-md-6">
                                     <label class="btn btn-secondary" for="image">Agregar imagen</label>
