--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -38,10 +38,7 @@
                         <a href="#">Comprar ahora</a>
 <!--                         <a href="#">Añadir al carrito</a>
  -->                        <a href="/products/edit/<%= product.id %>">Editar</a>
-                        <form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST" style="display: inline-flex">
-                        <button type="submit" class="action-button delete">Eliminar</button>
-                        </form>
-                        
+                            <a href="/products/delete/<%= product.id %>">Eliminar</a>
                     </div>
                     <div class="send">
                         <div class="cuandollega">
