--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div class="col-12">
-			<form action="/products/store" method="POST">
+			<form action="/products/store" method="POST" enctype="multipart/form-data">
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="title" class="form-label">Nombre del producto:</label>
@@ -43,9 +43,8 @@
 					
 					<div class="mb-3 col-12 col-md-6">
 						<label class="btn btn-secondary " for="image">Agregar imagen</label> 
-						<input hidden type="file" accept="image/*" name="image" id="image" multiple>
+						<input hidden type="file" accept="image/*" name="image" id="image" >
 					  </div>
-
 					<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
 					</div>
