--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,12 +10,12 @@
     <main class=" d-flex a-center j-center  flex-column ">
         <a class="m-top25 m-botton25" href="/"><img width="100" src="/img/logo2.jpg" alt="logo"></a>
         <h1>Acceder!</h1>
-        <form class=" w-40 d-flex  flex-column " action="/login.html" method="get">
-            <label for="name"></label>
-            <input class="m-top25 radio p-left" placeholder="Nombre de usuario" type="text">
+        <form class=" w-40 d-flex  flex-column " action="" method="POST">
+            <label for="email"></label>
+            <input class="m-top25 radio p-left" placeholder="Ingresa tu email" type="email" name="email" id="email">
             <label for="password"></label>
-            <input class="m-top50 radio p-left" placeholder="Elegi tu contraseña" type="text">
-            <input class="enviar m-top50 m-botton25" type="submit" value="Enviar" a>
+            <input class="m-top50 radio p-left" placeholder="Elegi tu contraseña" type="password" name="password" id="password">
+            <button class="enviar m-top50 m-botton25" type="submit">Enviar</button>
         </form>
         <button class="radio bc-white">Olvidaste tu contraseña?</button>
 
