--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,86 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- HEAD -->
-    <%- include('./partials/head') %>
-<body>
-    <!-- HEADER -->
-    <%- include('./partials/header') %>
-    <main class="container products-wrapper">
-            <div class="col-12">
-                <h1 class="m-botton25">Register</h1>
-            </div>
+<!-- HEAD -->
+<%- include('./partials/head') %>
 
-            <section class="">
-                <form class="row product-detail" action="/register" method="post">
-                    <div class="col-12 col-md-6">
-                        <label class="form-label " for="email">E-mail</label>
-                        <input class="form-input" type="email" name="email" id="email">
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <label class="form-label" for="password">Contraseña</label>
-                        <input class="form-input" type="password" name="password" id="password">
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <label class="form-label" for="password2">Confirmar contraseña</label>
-                        <input class="form-input" type="password" name="password2" id="password2">
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <label class="form-label" for="nombre">Nombre de usuario</label>
-                        <input class="form-input" type="text" name="nombre" id="nombre">
-                    </div>
+    <body>
+        <!-- HEADER -->
+        <%- include('./partials/header') %>
+            <main>
+                <div class="container my-5">
+                    <div class="row justify-content-center">
+                        <div class="col-md-10">
+                            <div class="col-12">
+                                <h1 class="m-botton25">Register</h1>
+                            </div>
+
+                            <section>
+                                <form action="" method="POST" enctype="multipart/form-data">
+                                    <div class="row">
+
+                                        <div class="col-md-6 my-1">
+                                            <div class="form-group">
+                                                <label for="name">Nombre completo</label>
+                                                <input class="form-control" type="text" name="name" id="name">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6 my-1">
+                                            <div class="form-group">
+                                                <label for="password">Contraseña</label>
+                                                <input class="form-control" type="password" name="password"
+                                                    id="password">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6 my-1">
+                                            <div class="form-group">
+                                                <label for="email">E-mail</label>
+                                                <input class="form-control" type="email" name="email" id="email">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6 my-1">
+                                            <div class="form-group">
+
+                                                <label>Pais</label>
+                                                <select class="form-control" name="country" id="country">
+                                                    <option value="1">Argentina</option>
+                                                    <option value="2">Peru</option>
+                                                    <option value="3">Paraguay</option>
+                                                    <option value="4">Uruguay</option>
+                                                    <option value="5">Chile</option>
+                                                    <option value="6">Brazil</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6 my-1">
+                                            <div class="form-group">
+                                                <label for="telefono">Telefono</label>
+                                                <input class="form-control" type="tel" name="telefono" id="telefono">
+                                            </div>
+                                        </div>
 
 
-                    <div class="col-12 col-md-6">
-                        <div>
-                            <label class="form-label" for="name">Nombre</label>
-                            <input class="form-input" type="text" name="name" id="name">
+                                        <div class="col-md-6 my-1">
+                                            <div class="form-group">
+                                                <label for="avatar">Foto de perfil</label>
+                                                <input class="form-control" type="file" name="avatar" id="avatar">
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <button class="enviar m-top50 m-botton25" type="submit">Enviar</button>
+                                            <p class="login-text">¿Ya tienes cuenta? <a href="/users/login">Entra
+                                                    aqui</a></p>
+                                        </div>
+                                    </div>
+
                         </div>
-                        <div class="col-12 col-md-6">
-                            <label class="form-label" for="apellido">Apellido</label>
-                            <input class="form-input" type="text" name="apellido" id="apellido">
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div>
-                            <label class="form-label">Pais</label>
-                            <select class="form-input" name="Pais" id="">
-                                <option value="1">Argentina</option>
-                                <option value="2">Peru</option>
-                                <option value="3">Paraguay</option>
-                                <option value="4">Uruguay</option>
-                                <option value="5">Chile</option>
-                                <option value="6">Brazil</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <label class="form-label" for="telefono">Telefono</label>
-                        <input class="form-input" type="tel" name="telefono" id="telefono">
-                    </div>
-                    <div class=" col-12 col-md-6" >
-                        <input class="enviar m-top50 m-botton25" type="submit" value="Enviar" a>
-                    </div>
-                    </div>
-                </form>
-                <div class="col-12 col-md-6">
-                    <div class="d-flex m-botton25">
-                        <input class="" type="checkbox" name="" value="si">
-                        <label class="m-left" for="">Al hacer click, aceptas nuestros terminos y condiciones,que eres mayor de
-                            18 años y
-                            conoces nuestra politica de juego responsable</label>
+                        </form>
                     </div>
                 </div>
-                <div class="d-flex">
-                    <div class="d-flex ">
-                        <p>Ya tienes cuenta?</p>
-                        <button class="enter m-left bc-white">Entra aqui</button>
-                    </div>
                 </div>
-        </section>
-    </main>
-    <a class="outsidelogo" href="/index"><img  width="60px" height="60px" src="/img/logo 1.png" alt="logo"></a>
+                </section>
+            </main>
+            <a class="outsidelogo" href="/index"><img width="60px" height="60px" src="/img/logo 1.png" alt="logo"></a>
 
-    <!-- FOOTER -->
-    <%- include('./partials/footer') %>
-</body>
+            <!-- FOOTER -->
+            <%- include('./partials/footer') %>
+    </body>
+
 </html>
