--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -8,12 +8,19 @@
     <%- include('./partials/header') %>
       <main>
 
-        <h1>UserProfile</h1>
+        <div class="container" style="margin-top: 40px; margin-bottom: 40px;">
 
-        <h2>Hi <%= user.name %>
-        </h2>
-        <img width="300" height="250" src="/images/avatars/<%= user.avatar %> ">
+          <div class="col-md-3">
 
+            <h1>UserProfile</h1>
+
+            <h2> Hola <%= user.name %>
+            </h2>
+            <img width="300" height="250" src="/img/avatars/<%= user.avatar %> ">
+
+          </div>
+
+        </div>
 
       </main>
 
