listo profile y add products

--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -11,7 +11,7 @@
                 <section class="producto">
                     <h2> <%= product.title %> </h2>
                     <div class="product_img">
-                        <img width="400" height="400" src="/img/<%= product.image %> " alt="tv">
+                        <img width="600" src="/img/<%= product.image %> " alt="tv">
                     </div>
 
                     <article class="more_img_box">
