--- a/views/register.ejs
+++ b/views/register.ejs
@@ -43,14 +43,14 @@
                                         <div class="col-md-6 my-1">
                                             <div class="form-group">
 
-                                                <label>Pais</label>
+                                                <label for="country">Pais</label>
                                                 <select class="form-control" name="country" id="country">
-                                                    <option value="1">Argentina</option>
-                                                    <option value="2">Peru</option>
-                                                    <option value="3">Paraguay</option>
-                                                    <option value="4">Uruguay</option>
-                                                    <option value="5">Chile</option>
-                                                    <option value="6">Brazil</option>
+                                                    <option value="Argentina">Argentina</option>
+                                                    <option value="Peru">Peru</option>
+                                                    <option value="Paraguay">Paraguay</option>
+                                                    <option value="Uruguay">Uruguay</option>
+                                                    <option value="Chile">Chile</option>
+                                                    <option value="Brazil">Brazil</option>
                                                 </select>
                                             </div>
                                         </div>
