--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -6,22 +6,27 @@
   <body class="result">
 
     <%- include('./partials/header') %>
-      <main>
-
+      <main >
+        
         <div class="container" style="margin-top: 40px; margin-bottom: 40px;">
 
           <div class="col-md-3">
 
             <h1>UserProfile</h1>
 
-            <h2> Hola <%= user.name %>
-            </h2>
-            <img width="300" height="250" src="/img/avatars/<%= user.avatar %> ">
+            <div class="profile-image text-center mt-4">
+            <img class="img-fluid img-thumbnail" width="300" src="/img/avatars/<%= user.avatar %> ">
+          </div>
 
+          <div class="profile text-center mt-2">
+
+            <h2 class="mt-2">Hola <%= user.name %></h2>
+            <span class="d-block"> <%= user.country %>  </span>
+          </div>
           </div>
 
         </div>
-
+    
       </main>
 
 
