--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -18,16 +18,19 @@
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="title" class="form-label">Nombre del producto:</label>
-						<input type="text" id="title" name="title" placeholder="Ej: Zapatillas Reebok" class="form-input">
-					</div>
+						<input type="text" id="title" name="title" placeholder="Ej: Zapatillas Reebok" class="form-input" class="form-control <%= locals.errors && errors.title ? 'is-invalid' : null %>" value="<%= locals.old && old.title ? old.title : null %>">
+            <p class="text-danger"><%= locals.errors && errors.title ? errors.title.msg : null %></p>
+          </div>
 					<div class="col-12 col-md-6">
 						<label for="price" class="form-label">Precio del producto:</label>
-						<input type="number" id="price" name="price" placeholder="Ej: 5678" class="form-input">
-					</div>
+						<input type="number" id="price" name="price" placeholder="Ej: 5678" class="form-input" class="form-control <%= locals.errors && errors.price ? 'is-invalid' : null %>" value="<%= locals.old && old.price ? old.price : null %>">
+            <p class="text-danger"><%= locals.errors && errors.price ? errors.price.msg : null %></p>
+          </div>
 					<div class="col-12 col-md-6">
 						<label for="discount" class="form-label">Descuento:</label>
-						<input type="number" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
-					</div>
+						<input type="number" id="discount" name="discount" placeholder="Ej: 15" class="form-input" value="<%= locals.old && old.discount ? old.discount : null %>">
+					
+          </div>
 					<div class="col-12 col-md-6">
 						<label for="section" class="form-label">Categoría:</label>
 						<select name="section" id="section" class="form-input">
@@ -35,16 +38,19 @@
 							<option value="lo mejor">Lo mejor</option>
 							<option value="oferta">Oferta</option>
 						</select>
+            <p class="text-danger"><%= locals.errors && errors.section ? errors.section.msg : null %></p>
 					</div>
 					<div class="col-12">
 						<label for="description" class="form-label">Descipción:</label>
-						<textarea name="description" id="description" class="form-input"></textarea>
-					</div>
+						<textarea name="description" id="description" class="form-input" class="form-control <%= locals.errors && errors.description ? 'is-invalid' : null %>" ><%= locals.old && old.description ? old.description : null %></textarea>
+            <p class="text-danger"><%= locals.errors && errors.description ? errors.description.msg : null %></p>
+          </div>
 					
 					<div class="mb-3 col-12 col-md-6">
-						<label class="btn btn-secondary " for="image">Agregar imagen</label> 
-						<input hidden type="file" accept="image/*" name="image" id="image" >
-					  </div>
+            <label class="btn btn-secondary <%= locals.errors && errors.image ? 'btn-danger' : null %>" for="image">Agregar imagen</label> 
+            <input hidden type="file" accept="image/*" name="image" id="image" multiple>
+            <p class="text-danger"><%= locals.errors && errors.image ? errors.image.msg : null %></p>
+          </div>
 					<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
 					</div>
