--- a/views/edition.ejs
+++ b/views/edition.ejs
@@ -2,7 +2,7 @@
 <html lang="es">
 
     <%- include('./partials/head', {
-        title : 'Nuevo producto'
+        title : 'Editar producto'
     }) %> 
 
 
@@ -17,7 +17,7 @@
                         <h4>Editar producto: <%= product.title %></h4>
                     </div>
                     <div class="card-body">
-                        <form action="/products/update/<%= product.id ? product.id : id %>_method=PUT" method="POST">
+                        <form action="/products/update/<%= product.id ? product.id : id %>?_method=PUT" method="POST">
                             <div class="row">
                                 <div class="mb-3 col-12">
                                     <label for="title" class="form-label">Producto</label>
@@ -57,8 +57,8 @@
                                     <p class="text-danger"><%= locals.errors && errors.description ? errors.description.msg : null %></p>
                                   </div>
                                   <div class="text-end">
-                                    <a href="/products/delete/<%= product.id %>" class="btn btn-danger">Eliminar</a>
-                                    <a href="/products/detail/<%= product.id %>" class="btn btn-secondary">Cancelar</a>
+                                    <a href="/products/delete/<%= product.id ? product.id : id %>" class="btn btn-danger">Eliminar</a>
+                                    <a href="/products/detail/<%= product.id ? product.id : id %>" class="btn btn-secondary">Cancelar</a>
                                     <button type="submit" class="btn btn-success">Guardar cambios</button>
 
                                   </div>
